2015-09-04  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * tests/khmer_tst_utils.py: look in "EGG-INFO" for scripts before checking
   the PATH

2015-09-04  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * doc/release-notes/release-2.0.md: release notes for 2.0
   * doc/user/install.txt: correct second invocation of nosetests to match the
   first.
   * setup.py: update the authors list for PyPI.
   * doc/user/known-issues.rst: remove three fixed issues; add a new one
   * doc/whats-new-2.0.rst: update to match the release notes
   * doc/release-notes/*.rst: refresh using `make convert-release-notes'

2015-09-02  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * *: complete audit of license headers
   * LICENSE: listings of some of the third-party licenses
   * bink.ipynb,lib/graphtest.cc,lib/primes.hh: deleted unused files
   * sandbox/assemstats.py: updated screed install instructions

2015-09-02  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * *: finish undoing the `load-graph.py` rename

2015-09-02  Micheal R. Crusoe  <crusoe@ucdavis.edu>

   * doc/requirements.txt: Update URL to sphinxcontrib-autoprogram tarball

2015-08-31  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * khmer/thread_utils.py: Use the robust test for paired reads from
   khmer.utils; drop `is_pair()`
   * tests/test_threaded_sequence_processor.py: Update to use Screed Record
   objects.

2015-08-28  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * doc/whats-new-2.0.rst: Many updates from `diff`ing the `--help` output of
   version 1.4.1 vs now.
   * Makefile: build the project if needed when making a PDF
   * doc/index.rst: fixed inter-doc links to be relative
   * doc/user/blog-posts.rst: replaced link to 88m-reads.fa.gz with a working
   URL
   * doc/user/{choosing-table-sizes,guide}.rst: disambiguated :option:
   references so that they link properly.
   * scripts/README.txt: removed unhelpful file
   * scripts/normalize-by-median.py: replace `--force-single` with